--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,28 @@
     <meta name="description" content="{{ page.description | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 </head>
 <body>
-    {{ content }}
+    <header>
+        <menu>
+            {% for item in site.data.navigation.languages %}
+            {% if item.language == page.lang %}
+            {% for link in item.links %}
+            {% if link.url contains "http" %}
+            {% assign url = link.url %}
+            {% else %}
+            {% assign url = link.url | relative_url %}
+            {% endif %}
+            <a class="page-link" href="{{ url }}">{{ link.title }}</a>
+            {% endfor %}
+            {% endif %}
+            {% endfor %}
+        </menu>
+        <h1>{{ page.title }}</h1>
+        {% if page.subtitle %}
+        <h2>{{ page.subtitle }}</h2>
+        {% endif %}
+    </header>
+    <main class="content">
+        {{ content }}
+    </main>
 </body>
 </html>
