--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -1,4 +1,5 @@
-{% assign posts = site.posts | where:"path",trans_path %}
+{% assign posts = site.posts | where:"lang", page.lang %}
+
 {% for post in posts %}
 <div>{{post.path[0]]}}<a href="{{post.url|absolute_url}}">{{ post.title }}</a></div>
 {% endfor %}
