--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -5,7 +5,7 @@
 <a class="b-post" href="{{post.url|absolute_url}}">
     <div class="b-post__title">{{ post.title }}</div>
     <div class="b-post__props">
-        <div class="b-post__props-date">{{ post.date }}</div>
+        <div class="b-post__props-date">{{ post.date | date: "%-d %B %Y"}}</div>
     </div>
     <div class="b-post__description">{{ post.description }}</div>
 </a>
