--- a/_scss/_common.scss
+++ b/_scss/_common.scss
@@ -1,3 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;600&display=swap');
+
+body,
+html {
+  margin: 0;
+  padding: 0;
+  font-family: 'Rubik', sans-serif;
+  font-size: 14px;
+}
+
 .content {
   max-width: 700px;
+  width: 100%;
+  margin: auto;
 }
