--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
