--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -1,1 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+@font-face {
+  font-family: NEXTART;
+  src: url("assets/fonts/NEXT ART_Regular.otf") format("opentype");
+}
+
+@font-face {
+  font-family: NEXTART;
+  src: url("assets/fonts/NEXT ART_Bold.otf") format("opentype");
+  font-weight: bold;
+}
