--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: NEXTART;
-  src: url("assets/fonts/NEXT ART_Regular.otf") format("opentype");
+  src: url("/assets/fonts/NEXT ART_Regular.otf") format("opentype");
 }
 
 @font-face {
   font-family: NEXTART;
-  src: url("assets/fonts/NEXT ART_Bold.otf") format("opentype");
+  src: url("/assets/fonts/NEXT ART_Bold.otf") format("opentype");
   font-weight: bold;
 }
