--- a/_sass/common.scss
+++ b/_sass/common.scss
@@ -3,11 +3,17 @@ html {
   margin: 0;
   padding: 0;
   font-family: 'Open Sans', sans-serif;
-  font-size: 14px;
+  font-size: 18px;
+  line-height: 30px;
 }
 
 .content {
   max-width: 700px;
   width: 100%;
   margin: auto;
+}
+
+h1 {
+  size: 42px;
+  line-height: 42px;
 }
