--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -1,1 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;800&display=swap');
+
+h1 {
+  size: 42px;
+  line-height: 42px;
+}
