--- a/_sass/common.scss
+++ b/_sass/common.scss
@@ -2,7 +2,7 @@ body,
 html {
   margin: 0;
   padding: 0;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Source Code Pro', monospace;
   font-size: 18px;
   line-height: 30px;
 }
