--- a/_sass/common.scss
+++ b/_sass/common.scss
@@ -2,7 +2,7 @@ body,
 html {
   margin: 0;
   padding: 0;
-  font-family: 'Source Code Pro', monospace;
+  font-family: 'Raleway', sans-serif;
   font-size: 18px;
   line-height: 30px;
 }
@@ -19,14 +19,17 @@ html {
   margin-bottom: 40px;
   display: block;
   &__title {
-    font-size: 27px;
-    font-weight: 700;
+    font-size: 28px;
+    font-weight: 600;
     margin-bottom: 4px;
+    letter-spacing: -0.3px;
   }
   &__props {
     display: none;
   }
   &__description {
     font-weight: 300;
+    font-size: 16px;
+    line-height: 24px;
   }
 }
