--- a/_sass/common.scss
+++ b/_sass/common.scss
@@ -18,16 +18,19 @@ html {
   margin-bottom: 40px;
   display: block;
   &__title {
-    font-size: 22px;
-    font-weight: 500;
-    margin-bottom: 4px;
+    font-size: 32px;
+    line-height: 45px;
+    font-weight: 600;
+    margin-top: 32px;
+    margin-bottom: 28px;
   }
   &__props {
     display: none;
   }
   &__description {
-    font-weight: 300;
-    font-size: 14px;
-    line-height: 24px;
+    line-height: 30px;
+    font-size: 16px;
+    color: #111;
+    font-weight: 400;
   }
 }
