--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'WoopWoooop';
   src: url('/assets/fonts/WoopWoooop.eot');
-  url('/assets/fonts/WoopWoooop.eot?#iefix') format('embedded-opentype'),
+  src: url('/assets/fonts/WoopWoooop.eot?#iefix') format('embedded-opentype'),
   url('/assets/fonts/WoopWoooop.woff2') format('woff2'),
   url('/assets/fonts/WoopWoooop.woff') format('woff'),
   url('/assets/fonts/WoopWoooop.ttf') format('truetype');
@@ -12,7 +12,7 @@
 @font-face {
   font-family: 'WoopWoooop';
   src: url('/assets/fonts/WoopWoooop-Bold.eot');
-  url('/assets/fonts/WoopWoooop-Bold.eot?#iefix') format('embedded-opentype'),
+  src: url('/assets/fonts/WoopWoooop-Bold.eot?#iefix') format('embedded-opentype'),
   url('/assets/fonts/WoopWoooop-Bold.woff2') format('woff2'),
   url('/assets/fonts/WoopWoooop-Bold.woff') format('woff'),
   url('/assets/fonts/WoopWoooop-Bold.ttf') format('truetype');
