--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -30,6 +30,16 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'CircularStd-Book';
+  src: url('/assets/fonts/CircularStd-Bold.eot');
+  src: url('/assets/fonts/CircularStd-Bold.eot?#iefix') format('embedded-opentype'),
+  url('/assets/fonts/CircularStd-Bold.woff') format('woff'),
+  url('/assets/fonts/CircularStd-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+
 
 h1 {
   size: 42px;
