--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -1,45 +1,4 @@
-@font-face {
-  font-family: 'WoopWoooop';
-  src: url('/assets/fonts/WoopWoooop.eot');
-  src: url('/assets/fonts/WoopWoooop.eot?#iefix') format('embedded-opentype'),
-  url('/assets/fonts/WoopWoooop.woff2') format('woff2'),
-  url('/assets/fonts/WoopWoooop.woff') format('woff'),
-  url('/assets/fonts/WoopWoooop.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'WoopWoooop';
-  src: url('/assets/fonts/WoopWoooop-Bold.eot');
-  src: url('/assets/fonts/WoopWoooop-Bold.eot?#iefix') format('embedded-opentype'),
-  url('/assets/fonts/WoopWoooop-Bold.woff2') format('woff2'),
-  url('/assets/fonts/WoopWoooop-Bold.woff') format('woff'),
-  url('/assets/fonts/WoopWoooop-Bold.ttf') format('truetype');
-  font-weight: bold;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'CircularStd-Book';
-  src: url('/assets/fonts/CircularStd-Book.eot');
-  src: url('/assets/fonts/CircularStd-Book.eot?#iefix') format('embedded-opentype'),
-  url('/assets/fonts/CircularStd-Book.woff') format('woff'),
-  url('/assets/fonts/CircularStd-Book.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'CircularStd-Book';
-  src: url('/assets/fonts/CircularStd-Bold.eot');
-  src: url('/assets/fonts/CircularStd-Bold.eot?#iefix') format('embedded-opentype'),
-  url('/assets/fonts/CircularStd-Bold.woff') format('woff'),
-  url('/assets/fonts/CircularStd-Bold.ttf') format('truetype');
-  font-weight: bold;
-  font-style: normal;
-}
-
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;800&display=swap');
 
 h1 {
   size: 42px;
