--- a/_sass/common.scss
+++ b/_sass/common.scss
@@ -1,43 +1,128 @@
-body,
-html {
+@import "variables";
+
+html, body {
   margin: 0;
   padding: 0;
-  font-family: 'InputMono', sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  color: #a0b3c6;
-  letter-spacing: .1px;
-  line-height: 28px;
-  font-feature-settings: "liga","kern";
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
+  font-size: 14px;
+  background: #fff;
+  color: $primary;
+  overflow-x: hidden;
+  line-height: 1.5;
+  height: 100%;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+}
+
+a {
+  outline: none;
+  &[href] {
+    text-decoration: none;
+    color: #0366d6;
+  }
+  &:visited {
+    color: $primary;
+  }
+}
+
+::selection {
+  background: $primary;
+  color: $white;
 }
 
 .content {
-  max-width: 700px;
+  display: flex;
+  flex-direction: column;
+  max-width: 1012px;
+  margin: 0 auto;
   width: 100%;
-  margin: auto;
+  &__container {
+    font-size: 16px;
+  }
+  &__header {
+
+  }
 }
 
-.b-post {
-  text-decoration: none;
-  color: #000;
-  margin-bottom: 40px;
-  display: block;
-  &__title {
-    font-size: 32px;
-    line-height: 45px;
-    font-weight: 600;
-    margin-top: 32px;
-    margin-bottom: 28px;
+.header {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 16px 0;
+}
+
+.logo {
+  display: flex;
+  flex:1 1 auto;
+  flex-basis: 40%;
+  flex-direction: row;
+  &__image {
+    margin-right: 16px;
+    img {
+      width: 48px;
+      height: 48px;
+      border-radius: 50%;
+    }
   }
-  &__props {
-    display: none;
+  &__content {
+    &-name {
+      font-size: 20px;
+      font-weight: 600;
+      height: 25px;
+      line-height: 25px;
+      color: rgb(36, 41, 46);
+    }
+    &-description {
+      color: rgb(106, 115, 125);
+      font-size: 14px;
+    }
   }
-  &__description {
+}
+
+.menu {
+  &__item {
+    display: inline-flex;
+    padding: 8px 16px;
+    font-size: 14px;
     line-height: 30px;
-    font-size: 16px;
-    color: #111;
-    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    background-color: initial;
+    border: 0;
+    border-bottom: 2px solid transparent;
+    align-items: center;
+    color: $primary !important;
+    svg {
+      margin-right: 6px;
+      color: #959da5;
+      path {
+        fill: #959da5;
+      }
+    }
+  }
+}
+
+.label {
+  display: flex;
+  font-weight: 500;
+  user-select: none;
+  border: 1px solid rgba(27, 31, 35, 0.15);
+  border-radius: 6px;
+  white-space: nowrap;
+  vertical-align: middle;
+  appearance: none;
+  padding: 3px 12px;
+  font-size: 12px;
+  line-height: 20px;
+  background-color: #fafbfc;
+  align-items: center;
+  justify-content: center;
+  svg {
+    margin-right: 6px;
+    rect, path {
+      fill: #6a737d;
+    }
   }
 }
