--- a/_sass/posts.scss
+++ b/_sass/posts.scss
@@ -19,7 +19,10 @@
   }
   &__header {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    @media (min-width: 768px) {
+      flex-direction: row;
+    }
   }
   &__props {
     display: flex;
