--- a/_sass/common.scss
+++ b/_sass/common.scss
@@ -35,9 +35,14 @@ a {
   flex-direction: column;
   max-width: 1012px;
   margin: 0 auto;
-  padding: 0 12px;
+  padding: 0 12px 32px;
   &__container {
     font-size: 16px;
+    blockquote {
+      border-left: 4px solid #DDD;
+      padding: 0 15px;
+      color: #777;
+    }
   }
   &__header {
 
