--- a/_sass/common.scss
+++ b/_sass/common.scss
@@ -19,6 +19,9 @@ a {
   &[href] {
     text-decoration: none;
     color: #0366d6;
+    &:visited {
+      color: #0366d6;
+    }
   }
   &:visited {
     color: $primary;
@@ -38,10 +41,14 @@ a {
   padding: 0 12px 32px;
   &__container {
     font-size: 16px;
+    img {
+      width: 100%;
+    }
     blockquote {
       border-left: 4px solid #DDD;
       padding: 0 15px;
       color: #777;
+      margin-left: 0 !important;
     }
   }
   &__header {
