--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="/favicon.ico" type="image/ico" />
-    <title>{% if page.title %}{{ page.title | escape }}{% else %}}{{ site.title | escape }}{% endif %}</title>
+    <title>
+        {% if page.browserTitle %}
+            {{ page.browserTitle | escape }}
+        {% else %}}
+            {% if page.title %}
+                {{ page.title | escape }}
+            {% else %}}
+                {{ site.title | escape }}
+            {% endif %}
+        {% endif %}
+    </title>
     <meta name="description" content="{{ page.description | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
     <link rel="stylesheet" href="{{ '/assets/styles/main.css' | relative_url }}" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -43,6 +53,9 @@
                         {% if link.blank %}
                         target="_blank"
                         {% endif %}
+                        {% if link.url contains "hh.ru" %}
+                        rel="nofollow"
+                        {% endif %}
                         class="menu__item"
                         href="{{ url }}"
                 >{{ link.svg }} {{ link.title }}</a>
@@ -59,5 +72,17 @@
             {{ content }}
         </main>
     </div>
+    <footer>
+        &copy; {{ 'now' | date: "%Y" }},
+        {% for item in site.data.navigation.languages %}
+        {% if item.language == page.lang %}
+            {{ item.name }}
+        {% endif %}
+        {% endfor %},
+        <a target="_blank" href="https://github.com/maxkrasnov">github</a> |
+        <a target="_blank" href="https://ru.stackoverflow.com/users/243667/maxkrasnov?tab=profile">stackoverflow</a>
+    </footer>
+    <!-- Yandex.Metrika counter --> <script type="text/javascript" > (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter46521003 = new Ya.Metrika2({ id:46521003, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/tag.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks2"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/46521003" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
+    <!-- Global site tag (gtag.js) - Google Analytics --><script async src="https://www.googletagmanager.com/gtag/js?id=UA-56160960-2"></script><script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'UA-56160960-2');</script>
 </body>
 </html>
