--- a/_sass/common.scss
+++ b/_sass/common.scss
@@ -1,6 +1,8 @@
 @import "variables";
 
 html, body {
+  display: flex;
+  flex-direction: column;
   margin: 0;
   padding: 0;
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
@@ -12,6 +14,10 @@ html, body {
   height: 100%;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 a {
@@ -34,11 +40,13 @@ a {
 }
 
 .content {
+  flex: 1 0 auto;
   display: flex;
   flex-direction: column;
   max-width: 1012px;
   margin: 0 auto;
   padding: 0 12px 32px;
+  width: 100%;
   &__container {
     font-size: 16px;
     img {
@@ -146,4 +154,12 @@ h1 {
   @media (max-width: 991px) {
     font-size: 24px;
   }
+}
+
+footer {
+  flex-shrink: 0;
+  max-width: 1012px;
+  padding: 0 12px 32px;
+  margin: auto;
+  width: 100%;
 }
