--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -16,7 +16,7 @@
             </div>
         </div>
     </div>
-    <div class="post__description">{{ post.description }}</div>
+    <!--<div class="post__description">{{ post.description }}</div>-->
 </a>
 {% endfor %}
 </div>
