--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <title>
         {% if page.browserTitle %}
             {{ page.browserTitle | escape }}
-        {% else %}}
+        {% else %}
             {% if page.title %}
                 {{ page.title | escape }}
             {% else %}}
